--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
     "groq": "^3.64.3",
-    "groq-sdk": "^0.8.0"
+    "groq-sdk": "^0.8.0",
+    "path": "^0.12.7"
   }
 }
