--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "date-and-time": "^3.6.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "groq": "^3.64.3",
